# fcitx5-dvorak-qwerty

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  dq-addon.conf.in  dq.conf  dq.cpp  dq.h
